<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#E3F2FD"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="in.mayanknagwanshi.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_title"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:id="@+id/textView" />
    <Button
        android:layout_width="250dp"
        android:padding="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceButton"
        android:layout_height="wrap_content"
        android:text="@string/app_name1"
        android:background="#F08C35"
        android:id="@+id/btn1" />
    <Button
        android:layout_width="250dp"
        android:padding="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceButton"
        android:layout_height="wrap_content"
        android:text="@string/app_name2"
        android:background="#F08C35"
        android:id="@+id/btn2" />
    <Button
        android:layout_width="250dp"
        android:padding="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceButton"
        android:layout_height="wrap_content"
        android:text="@string/app_name3"
        android:background="#F08C35"
        android:id="@+id/btn3" />
    <Button
        android:layout_width="250dp"
        android:padding="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceButton"
        android:layout_height="wrap_content"
        android:text="@string/app_name4"
        android:background="#F08C35"
        android:id="@+id/btn4" />
    <Button
        android:layout_width="250dp"
        android:padding="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceButton"
        android:layout_height="wrap_content"
        android:text="@string/app_name5"
        android:background="#F08C35"
        android:id="@+id/btn5" />
    <Button
        android:layout_width="250dp"
        android:padding="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceButton"
        android:layout_height="wrap_content"
        android:text="@string/app_name6"
        android:background="#009688"
        android:id="@+id/btn6" />
</LinearLayout>
